--- a/src/app/rentals-search/rentals-search.component.css
+++ b/src/app/rentals-search/rentals-search.component.css
@@ -10,5 +10,11 @@ input[type=text] {
 
 button {
   margin-top: 30px;
-  font-size: 24px;
+  font-size: 23px;
+}
+
+li {
+  border: 3px solid #ccc;
+  width: 50%;
+  margin-top: 10px;
 }
