--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="collapse navbar-collapse">
-    <h1 class="navbar-brand">{{title}}</h1>
-<!--    <ul class="navbar-nav mr-auto">-->
-<!--      <li class="nav-item active">-->
-<!--        <a class="nav-link" routerLink="/dashboard">Dashboard</a>-->
-<!--      </li>-->
-<!--    </ul>-->
+  <div class="collapse navbar-collapse container-fluid">
+    <a class="navbar-brand" routerLink="/dashboard">{{title}}</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/bookings">Bookings</a>
+      </li>
+    </ul>
   </div>
 </nav>
 <router-outlet></router-outlet>
