--- a/src/app/rentals-search/rentals-search.component.html
+++ b/src/app/rentals-search/rentals-search.component.html
@@ -8,6 +8,7 @@
       <h4>Location: {{rental.location}}</h4>
       <h4>Capacity: {{rental.capacity}}</h4>
       <h4>Price: {{rental.price}}</h4>
+      <button mat-raised-button (click)="openDialog()">Book</button>
     </li>
   </ul>
 </div>
