--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="collapse navbar-collapse container-fluid">
-    <a class="navbar-brand" routerLink="/dashboard">{{title}}</a>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/bookings">Bookings</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<mat-toolbar color="accent">
+  <mat-toolbar-row>
+    <div fxFlex="25%">
+      <a mat-button routerLink="/dashboard">{{title}}</a>
+    </div>
+    <div fxFlex="25%">
+    <a mat-button routerLink="/bookings">Bookings</a>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
