--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -1,10 +1,11 @@
 <h2>Bookings List</h2>
 <ul>
-  <li *ngFor="let booking of bookings">
+  <li *ngFor="let booking of bookings" [appHighlight]="color">
     <h4>Booking no. {{booking.id}}</h4>
     <h5>Id: {{booking.id}}</h5>
     <h5>Rental id: {{booking.rental_id}}</h5>
     <h5>No of people: {{booking.nrOfPeople}}</h5>
-    <mat-checkbox>Show photo</mat-checkbox>
+    <input type="checkbox" [(ngModel)]="booking.isChecked"> Show photo
+    <div *ngIf="booking.isChecked"><img src="{{booking.imagePath}}" alt="Image unavailable"/></div>
   </li>
 </ul>
