--- a/src/app/rentals-search/rentals-search.component.html
+++ b/src/app/rentals-search/rentals-search.component.html
@@ -2,13 +2,13 @@
   <input #searchBar type="text" placeholder="Search by location..">
   <button type="button" (click)="search(searchBar.value)">Search</button>
   <ul>
-    <li *ngFor="let rental of rentals$ | async">
+    <li *ngFor="let rental of rentals$ | async" [appHighlight]="color">
       <h3>Rental no. {{rental.id}}</h3>
       <h4>Id: {{rental.id}}</h4>
       <h4>Location: {{rental.location}}</h4>
       <h4>Capacity: {{rental.capacity}}</h4>
       <h4>Price: {{rental.price}}</h4>
-      <button mat-raised-button (click)="openDialog()">Book</button>
+      <button class="book" mat-raised-button (click)="openDialog(rental.id)">Book</button>
     </li>
   </ul>
 </div>
