--- a/src/app/booking-dialog/booking-dialog.component.html
+++ b/src/app/booking-dialog/booking-dialog.component.html
@@ -1,11 +1,27 @@
 <h2 mat-dialog-title>Add Booking</h2>
 <div mat-dialog-content>
-  <p>How many people?</p>
-  <mat-form-field appearance="fill">
-    <input [(ngModel)]="nrOfPeople" matInput>
-  </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="onAddBooking()">Add</button>
-  <button mat-button mat-dialog-close (click)="onClose()">Close</button>
+  <form [formGroup]="dialogForm" (ngSubmit)="onAddBooking()">
+    <p>Please type your email: </p>
+    <mat-form-field appearance="fill">
+      <input matInput formControlName="email">
+      <mat-error *ngIf="errorHandling('email', 'required')">
+        Email is required
+      </mat-error>
+    </mat-form-field>
+
+    <p>How many people?</p>
+    <mat-form-field appearance="fill">
+      <input matInput formControlName="nrOfPeople">
+      <mat-error *ngIf="errorHandling('nrOfPeople', 'required')">
+        Nr of people is required
+      </mat-error>
+    </mat-form-field>
+
+    <div mat-dialog-actions>
+      <button mat-button type="submit" [disabled]="!dialogForm.valid">Add</button>
+      <button mat-button mat-dialog-close (click)="onClose()">Close</button>
+    </div>
+
+    <p>Form status: {{dialogForm.status}} </p>
+  </form>
 </div>
