--- a/src/app/booking-dialog/booking-dialog.component.html
+++ b/src/app/booking-dialog/booking-dialog.component.html
@@ -4,22 +4,30 @@
     <p>Please type your email: </p>
     <mat-form-field appearance="fill">
       <input matInput formControlName="email">
-      <mat-error *ngIf="errorHandling('email', 'required')">
+      <mat-error [appErrorHandling]="dialogForm"
+                 [control]="'email'"
+                 [error]="'required'">
         Email is required
       </mat-error>
-      <mat-error *ngIf="errorHandling('email', 'pattern')">
+      <mat-error [appErrorHandling]="dialogForm"
+                 [control]="'email'"
+                 [error]="'pattern'">
         Email is invalid
       </mat-error>
     </mat-form-field>
 
     <p>How many people?</p>
     <mat-form-field appearance="fill">
-      <input matInput formControlName="nrOfPeople">
-      <mat-error *ngIf="errorHandling('nrOfPeople', 'required')">
+      <input matInput formControlName="nrOfPeople" [appNrOfPeopleValidation]="capacity">
+      <mat-error [appErrorHandling]="dialogForm"
+                 [control]="'nrOfPeople'"
+                 [error]="'required'">
         Nr of people is required
       </mat-error>
-      <mat-error *ngIf="errorHandling('nrOfPeople', 'wrongNrOfPeople')">
-        Nr of people is too big
+      <mat-error [appErrorHandling]="dialogForm"
+                 [control]="'nrOfPeople'"
+                 [error]="'wrongNrOfPeople'">
+        Nr of people needs to be smaller than capacity
       </mat-error>
     </mat-form-field>
 
