--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,25 @@
-<div>
+<div class="form">
   <h2 mat-dialog-title>Login</h2>
   <div mat-dialog-content>
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
       <p>Username: </p>
       <mat-form-field appearance="fill">
         <input matInput formControlName="username">
+        <mat-error [appErrorHandling]="loginForm"
+                   [control]="'username'"
+                   [error]="'required'">
+          Username is required
+        </mat-error>
       </mat-form-field>
 
       <p>Password: </p>
       <mat-form-field appearance="fill">
         <input matInput formControlName="password">
+        <mat-error [appErrorHandling]="loginForm"
+                   [control]="'password'"
+                   [error]="'required'">
+          Password is required
+        </mat-error>
       </mat-form-field>
 
       <div mat-dialog-actions>
