--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
 <h2>The rentals of your dreams!</h2>
-<app-rentals-search></app-rentals-search>
+<div class="container">
+  <app-rentals-search></app-rentals-search>
+</div>
+<div class="ads-style">
+  <app-ad-banner [ads]="ads"></app-ad-banner>
+</div>
